--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -19,6 +20,8 @@
     "mongoose-enumvalues": "0.0.3",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.4",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.2",
     "tslib": "^2.0.0"
