--- a/apps/tapi/package.json
+++ b/apps/tapi/package.json
@@ -22,5 +22,12 @@
     "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@trpc/server": "^10.45.2",
+    "fastify": "^4.26.2",
+    "superjson": "1.13.3",
+    "trpc-playground": "^1.0.4",
+    "zod": "^3.22.4"
   }
 }
