--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGO_URI=mongodb+srv://glassisaif:onJwZJGPsumzGsEw@cluster0.szu8ryk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+DATABASE_URL="postgresql://user:password@localhost:5432/crypto_scope"
