--- a/apps/tapi/package.json
+++ b/apps/tapi/package.json
@@ -2,6 +2,7 @@
   "name": "tapi",
   "version": "0.0.1",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "clean:dist": "rimraf ./dist",
@@ -11,23 +12,27 @@
     "lint:fix": "npx eslint --fix src/**/*.ts && npx eslint --fix test/**/*.ts",
     "prebuild": "pnpm run clean:dist",
     "build": "tsc",
-    "start": "node dist/src/index",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "start": "node dist/index",
+    "start:dev": "nodemon --exec node --loader ts-node/esm src/index.ts"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
     "rimraf": "^3.0.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@trpc/server": "^10.45.2",
     "fastify": "^4.26.2",
+    "lucia": "^3.2.0",
+    "nodemon": "^3.0.2",
+    "prisma": "^5.13.0",
     "superjson": "1.13.3",
     "trpc-playground": "^1.0.4",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   }
 }
