--- a/apps/tapi/tsconfig.json
+++ b/apps/tapi/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
+    "esModuleInterop": true,
+    "moduleResolution": "Node",
+    "module": "ESNext",
+    "target": "ESNext",
     "outDir": "dist"
   },
   "include": ["src/**/*", "test/**/*"]
