--- a/apps/tapi/package.json
+++ b/apps/tapi/package.json
@@ -25,6 +25,9 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@lucia-auth/adapter-postgresql": "^3.1.2",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.13.0",
     "@trpc/server": "^10.45.2",
     "fastify": "^4.26.2",
     "lucia": "^3.2.0",
