--- a/apps/tapi/package.json
+++ b/apps/tapi/package.json
@@ -29,6 +29,7 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.13.0",
     "@trpc/server": "^10.45.2",
+    "argon2": "^0.40.1",
     "fastify": "^4.26.2",
     "lucia": "^3.2.0",
     "nodemon": "^3.0.2",
