trpc client basic setup

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tabler/icons-react": "^3.2.0",
+    "@trpc/client": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -35,6 +37,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "simplex-noise": "^4.0.1",
+    "superjson": "1.13.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
